bin_PROGRAMS = addchain ascode aascode addchain2 addchain3

AM_CFLAGS = -g -O3 -march=native $(OPENMP_CFLAGS)

BEAM = beam.c beam.h
addchain_SOURCES = addchain.c $(BEAM)
addchain2_SOURCES = addchain2.c $(BEAM)
addchain3_SOURCES = addchain3.c $(BEAM)
ascode_SOURCES = ascode.c $(BEAM)
aascode_SOURCES = aascode.c $(BEAM)
