bin_PROGRAMS = addchain ascode aascode addchain2 addchain3 gf4 gf2

AM_CFLAGS = -g -O3 $(OPENMP_CFLAGS)

BEAM = beam.c beam.h
addchain_SOURCES = addchain.c $(BEAM)
addchain2_SOURCES = addchain2.c $(BEAM)
addchain3_SOURCES = addchain3.c $(BEAM)
ascode_SOURCES = ascode.c $(BEAM)
aascode_SOURCES = aascode.c $(BEAM)
gf4_SOURCES = gf4.c $(BEAM)
gf2_SOURCES = gf2.c $(BEAM)
